@@ -50,7 +50,7 @@ import org.gjt.sp.util.Log;
 /**
  * The main class of the jEdit text editor.
  * @author Slava Pestov
- * @version $Id: jEdit.java,v 1.50 2002/02/17 02:05:41 spestov Exp $
+ * @version $Id: jEdit.java,v 1.51 2002/02/19 06:51:11 spestov Exp $
  */
 public class jEdit
 {
@@ -1512,7 +1512,14 @@ public class jEdit
 	 */
 	public static Buffer newFile(View view)
 	{
-		return newFile(view,null);
+		String path = MiscUtilities.getParentOfPath(view.getBuffer().getPath());
+		VFS vfs = VFSManager.getVFSForPath(path);
+		// don't want 'New File' to create a read only buffer if current
+		// file is on SQL VFS or something
+		if((vfs.getCapabilities() & VFS.WRITE_CAP) == 0)
+			path = System.getProperty("user.home");
+
+		return newFile(view,path);
 	} //}}}
 
 	//{{{ newFile() method
